--- a/src/app/account/account-container.component.html
+++ b/src/app/account/account-container.component.html
@@ -1,7 +1,7 @@
-<div class="view-container parent" [@slideIn]="'static'" *ngIf="currentView === 'app-account'">
+<div class="view-container panel center" [ngClass]="{'slide-left': currentView === 'app-share'}">
   <app-account [user]="user" (changeView)="changeView($event)"></app-account>
 </div>
 
-<div class="view-container child" [@slideIn]="'dynamic'" *ngIf="currentView === 'app-share'">
+<div class="view-container panel right" [ngClass]="{'slide': currentView === 'app-share'}">
   <app-share (changeView)="changeView($event)"></app-share>
 </div>
