Change "refer a friend" to link to CCP

--- a/src/app/account/account/account.component.html
+++ b/src/app/account/account/account.component.html
@@ -36,8 +36,8 @@
     <section class="account-menu">
       <div class="header">More</div>
 
-      <div class="setting bottom-separator" (click)="goToView('app-share')">
-        <div class="icon page">Share Cypherpunk with a friend</div>
+      <div class="setting bottom-separator" (click)="open('https://cypherpunk.com/account/refer-a-friend')">
+        <div class="icon page">Refer a Friend</div>
       </div>
 
       <div class="setting bottom-separator" (click)="open('https://cypherpunk.com/support')">
