--- a/src/app/settings/settings-controller.component.scss
+++ b/src/app/settings/settings-controller.component.scss
@@ -1,7 +1,7 @@
 .panel {
   width: 100%;
   height: 100%;
-  transition: transform 0.5s ease-in;
+  transition: transform 350ms ease-out;
 }
 
 .center {
@@ -20,7 +20,7 @@
     visibility: hidden;
     pointer-events: none;
     opacity: 0;
-    transition: all 0.5s ease-in;
+    transition: all 350ms ease-out;
     &.show {
       visibility: visible;
       opacity: 0.35;
