--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -203,7 +203,7 @@
     width: 152px;
     cursor: pointer;
 
-    transition: opacity 0.5s ease-in 0.3s, visibility 0.5s step-start 0.3s, pointer-events 0.5s step-end 0.3s;
+    transition: opacity 350ms ease-out 0.3s, visibility 0.5s step-start 0.3s, pointer-events 0.5s step-end 0.3s;
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
@@ -279,7 +279,7 @@
       width: 150px;
       height: 75px;
       padding: 8px;
-      transition: padding 1s ease, border 0.5s ease-in, width 1s, margin 1s, box-shadow 1s;
+      transition: padding 1s ease, border 350ms ease-out, width 1s, margin 1s, box-shadow 1s;
     }
 
     .slider {
@@ -333,7 +333,7 @@
       background-image: linear-gradient(135deg, rgba(255,255,255,0.4) 25%, transparent 75%);
       border: 4px solid #177;
 
-      transition: transform 0.5s ease, border 0.5s ease-in-out, background-color 0.5s ease;
+      transition: transform 0.5s ease, border 350ms ease-out-out, background-color 0.5s ease;
 
       &::before {
         opacity: 0;
@@ -459,7 +459,7 @@
     display: flex;
     flex-direction: column;
     z-index: 1;
-    transition: opacity 0.5s ease-in 0.3s, visibility 0.5s step-start 0.3s, pointer-events 0.5s step-end 0.3s;
+    transition: opacity 350ms ease-out 0.3s, visibility 0.5s step-start 0.3s, pointer-events 0.5s step-end 0.3s;
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
@@ -497,7 +497,7 @@
     font-size: 16px;
     transition: background 0.4s, color 0.4s;
     color: rgba(255,255,255,0.75);
-    transition: opacity 0.5s ease-in 0.3s, visibility 0.5s step-start 0.3s, pointer-events 0.5s step-end 0.3s;
+    transition: opacity 350ms ease-out 0.3s, visibility 0.5s step-start 0.3s, pointer-events 0.5s step-end 0.3s;
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
