Convert CSS em values to px values

--- a/src/app/settings/privacy-filter/privacy-filter.component.scss
+++ b/src/app/settings/privacy-filter/privacy-filter.component.scss
@@ -39,7 +39,7 @@
     .back {
       align-self: stretch;
       font-size: 28px;
-      width: 2em;
+      width: 56px;
       margin: 0;
       height: auto;
       flex: none;
