--- a/src/app/account/share/share.component.scss
+++ b/src/app/account/share/share.component.scss
@@ -40,7 +40,7 @@
     .back {
       align-self: stretch;
       font-size: 28px;
-      width: 2em;
+      width: 56px;
       margin: 0;
       height: auto;
       flex: none;
@@ -90,8 +90,8 @@
           font-size: 24px;
           margin-right: 10px;
           display: inline-block;
-          margin: 0 0.25em 0 0.25em;
-          width: 1.18em;
+          margin: 0 6px 0 6px;
+          width: 28px;
           font-family: FontAwesome;
         }
       }
