--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -522,7 +522,7 @@
       width: 40px;
       height: 40px;
       background: linear-gradient(to right, rgba(0,0,0,0.25), transparent 50%);
-      font-size: 1em;
+      font-size: 16px;
       color: rgba(200,255,255,0.75);
       transition: color 0.2s;
     }
@@ -921,7 +921,7 @@
     > span {
       text-transform: uppercase;
       font-size: 10px;
-      margin-left: 0.5em;
+      margin-left: 5px;
       color: rgba(255,255,255,0.5);
     }
   }
