--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -179,7 +179,7 @@
         transform: translate(-50%, -100%) translateY(0px) skewX(-60deg) scaleY(0.3);
         filter: blur(2px);
         z-index: 1;
-        opacity: 0.75;
+        opacity: 0/*.75*/; // hide shadow for now
       }
       &.up {
         &::before, &::after {
@@ -188,7 +188,7 @@
         &::before { transform: translate(-50%,-100%) translateY(2px) translateY(-20px); }
         &::after {
           transform: translate(-50%, -100%) translateY(0px) skewX(-60deg) scaleY(0.3) translateY(-20px);
-          opacity: 0.25;
+          opacity: 0/*.25*/; // hide shadow for now
         }
       }
       &.hidden { opacity: 0; }
