Fix inconsistent menu state
closed #15

--- a/src/app/account/account/account.component.html
+++ b/src/app/account/account/account.component.html
@@ -37,7 +37,7 @@
       <div class="header">More</div>
 
       <div class="setting bottom-separator" (click)="open('https://cypherpunk.com/account/refer-a-friend')">
-        <div class="icon page">Refer a Friend</div>
+        <div class="icon external">Refer a Friend</div>
       </div>
 
       <div class="setting bottom-separator" (click)="open('https://cypherpunk.com/support')">
