--- a/src/app/settings/privacy-filter/privacy-filter.component.scss
+++ b/src/app/settings/privacy-filter/privacy-filter.component.scss
@@ -58,7 +58,7 @@
   padding: 10px;
   font-size: 16px;
   overflow: auto;
-  &.bottom-separator { border-bottom: 1px solid rgba(255, 255, 255, 0.25); }
+  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
   &:hover {
     color: rgba(255, 255, 255, 1);
     background-image: linear-gradient(to left, rgba(255, 255, 255, 0.1), transparent);
