Disable image dragging on main page

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -2,9 +2,9 @@
   <!-- Top Header Banner -->
   <div id="header__main">
     <!-- Account link -->
-    <div class="account no-select">
+    <div class="account">
       <a (click)="accountEmit()">
-        <img class="logo" src="/assets/account.png">
+        <img class="logo no-select" src="/assets/account.png">
       </a>
     </div>
 
@@ -12,9 +12,9 @@
     <img class="title no-select" src="/assets/logo.png">
 
     <!-- Settings link -->
-    <div class="settings no-select">
+    <div class="settings">
       <a (click)="settingsEmit()">
-        <img class="gear" src="/assets/gear.png" alt="">
+        <img class="gear no-select" src="/assets/gear.png" alt="">
       </a>
     </div>
   </div>
