--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,8 +1,23 @@
+/* latin-ext */
+@font-face {
+  font-family: 'Dosis';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Dosis Regular'), local('Dosis-Regular'), url(../assets/fonts/Dosis-Regular.ttf) format('woff2');
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Dosis';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Dosis Regular'), local('Dosis-Regular'), url(../assets/fonts/Dosis-Regular.ttf) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
+
 @import '~bourbon/app/assets/stylesheets/_bourbon';
 @import '~bourbon-neat/app/assets/stylesheets/_neat';
-@import url('https://fonts.googleapis.com/css?family=Dosis:200,300,400,500,800');
 @import 'variables';
-@import '~/../src/assets/fonts/font-awesome.min.css';
 
 /* You can add global styles to this file, and also import other style files */
 
