--- a/src/app/account/account/account.component.scss
+++ b/src/app/account/account/account.component.scss
@@ -43,14 +43,6 @@
     flex-direction: column;
   }
 
-  .account-info {
-    font-size: 16px;
-    text-align: center;
-    padding: 15px 0;
-    min-height: 100px;
-    background: linear-gradient(135deg, rgba(150, 255, 200, 0.2), transparent 50%), linear-gradient(to bottom, rgba(0, 0, 0, 0.25), transparent 10px);
-  }
-
   .pane {
     position: relative;
     background: rgba(255, 255, 255, 0.16);
@@ -123,6 +115,45 @@
   }
 
   .user.pane {
+    margin-top: 100px;
+    &:before { padding-top: 0; }
+
+    .background {
+      position: absolute;
+      top: -100px;
+      left: 0;
+      width: 100%;
+      height: 102px;
+      border-bottom: 2px solid rgba(200, 255, 255, 0.05);
+
+      .before {
+        z-index: 2;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), transparent 10px);
+      }
+
+      .after {
+        z-index: 3;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        background: linear-gradient(135deg,
+          transparent 50%,
+          rgba(200, 255, 255, 0.1) 55%, rgba(200, 255, 255, 0.1) 65%,
+          transparent 65%, transparent 70%,
+          rgba(200, 255, 255, 0.1) 75%, rgba(200, 255, 255, 0.1) 80%,
+          transparent 80%
+        );
+        width: 200%;
+        transform: translateX(-100%);
+        animation: 6s infinite cubic-bezier(0.2,0.2,0.7,0.2) running banner-shimmer;
+      }
+
+      img { opacity: 0.6; border: 0; }
+    }
+
     .row {
       position: relative;
       padding-left: 55px;
@@ -181,6 +212,8 @@
         text-align: center;
       }
 
+      span.expired { color: rgba(255, 255, 255, 0.5); }
+
       small {
         display: block;
         font-size: 13px;
@@ -189,6 +222,34 @@
         line-height: 1;
         padding-top: 2px;
         text-transform: capitalize;
+        &.expired { color: #f98; }
+      }
+    }
+
+    .renews {
+      display: block;
+      padding-left: 55px;
+      font-size: 13px;
+      font-weight: 500;
+      text-transform: uppercase;
+      line-height: 34px;
+      height: 34px;
+      background: rgba(30, 150, 100, 0.65);
+      color: rgba(245, 255, 250, 0.8);
+      transition: background 0.1s, color 0.1s, text-shadow 0.1s;
+      cursor: pointer;
+      &:hover {
+        background: #1e9664;
+        text-shadow: 0 0 10px rgba(200, 255, 200, 0.75);
+        color: white;
+      }
+
+      i {
+        margin: 0 0.25em;
+        font-size: 1em;
+        width: 1.18em;
+        height: 1em;
+        text-align: center;
       }
     }
   }
@@ -219,4 +280,10 @@
       &:hover { color: #7ffffc; }
     }
   }
+}
+
+@keyframes banner-shimmer {
+  0% { transform: translateX(-100%); }
+  93% { transform: translateX(-100%); }
+  100% { transform: translateX(50%); }
 }
