--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -207,12 +207,6 @@
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
-    &.hidden {
-      transition: opacity 0.5s ease-out 0s, visibility 0.5s step-end 0s, pointer-events 0.5s step-start 0s;
-      opacity: 0;
-      visibility: hidden;
-      pointer-events: none;
-    }
 
     .bg {
       opacity: 0.25;
@@ -450,6 +444,19 @@
         opacity: 1;
         transition-delay: 0s;
       }
+    }
+
+    &.hidden {
+      transition: opacity 0.5s ease-out 0s, visibility 0.5s step-end 0s, pointer-events 0.5s step-start 0s;
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+    }
+
+
+    &.disabled {
+      pointer-events: none;
+      opacity: 0.3;
     }
   }
 
@@ -709,6 +716,7 @@
           }
         }
         &.disabled, &.selected { opacity: 0.3; cursor: default; }
+        &.account-disabled { opacity: 0.3; pointer-events: none; }
         > span:first-of-type { flex: 1 0 auto; }
         > .flag { margin-right: 10px; }
         > .ping-time { color: rgba(200,255,255,0.3); }
@@ -779,6 +787,7 @@
         }
 
         &.selected, &.disabled { opacity: 0.5; }
+        &.disabled { opacity: 0.3; pointer-events: none; }
       }
     }
 
