--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -27,8 +27,8 @@
       </div>
 
       <div class="input-wrapper">
-        <input #emailInput type="email" [(ngModel)]="user.email" (keyup.enter)="checkEmail()" [disabled]="currentView !== 'email'" autofocus>
-        <button (click)="checkEmail()" [disabled]="currentView !== 'email'">&#8250;</button>
+        <input #emailInput type="email" placeholder="Email" [(ngModel)]="user.email" (keyup.enter)="checkEmail()" [disabled]="currentView !== 'email' || disableEmail" autofocus>
+        <button (click)="checkEmail()" [disabled]="currentView !== 'email' || disableEmail">&#8250;</button>
       </div>
     </div>
 
@@ -44,8 +44,11 @@
       </div>
 
       <div class="input-wrapper">
-        <input #passwordInput type="password" [(ngModel)]="user.password" placeholder="Password" (keyup.enter)="login()" [disabled]="currentView !== 'login'">
-        <button (click)="login()" [disabled]="currentView !== 'login'">&#8250;</button>
+        <input #passwordInput type="password" placeholder="Password" [(ngModel)]="user.password" placeholder="Password" (keyup.enter)="login()" [disabled]="currentView !== 'login' || disableLogin" [ngClass]="{'error': errors.login}">
+        <button (click)="login()" [disabled]="currentView !== 'login' || disableLogin">&#8250;</button>
+        <div class="error-text" *ngIf="errors.login">
+          Wrong Password!
+        </div>
       </div>
 
       <div class="login-back" (click)="goToEmail()">
@@ -65,8 +68,8 @@
       </div>
 
       <div class="input-wrapper">
-        <input #registerPasswordInput type="password" [(ngModel)]="user.password" placeholder="Password" (keyup.enter)="register()" [disabled]="currentView !== 'register'">
-        <button class="signup" (click)="register()" [disabled]="currentView !== 'register'">
+        <input #registerPasswordInput type="password" [(ngModel)]="user.password" placeholder="Password" (keyup.enter)="register()" [disabled]="currentView !== 'register' || disableRegister">
+        <button class="signup" (click)="register()" [disabled]="currentView !== 'register' || disableRegister">
           SIGN UP <span>&#8250;</span>
         </button>
       </div>
