--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -88,18 +88,40 @@
   .input-wrapper {
     position: relative;
     padding: 0 20px;
-    overflow: auto;
 
     input {
       height: 50px;
       width: 100%;
       padding: 5px 30px 5px 10px;
-      background-color: #0d1e26;
-      border: 1px solid #19474c;
-      border-radius: 5px;
+      background: rgba(0, 0, 0, 0.2);
+      border: 1px solid rgba(127, 255, 252, 0.4);
+      border-radius: 6px;
       color: #fff;
       font-size: 16px;
+      transition: 0.2s background-color, 0.2s border-color;
+      outline: 0;
+      opacity: 0.5;
+      &:focus {
+        background: rgba(0, 0, 0, 0.6);
+        border-color: rgba(127, 255, 252, 0.8);
+      }
+      &:disabled { background: transparent; }
+      &.error {
+        background: rgba(255,0,0,0.5);
+        border-color: rgba(255,0,0,0.8);
+      }
     }
+
+    .error-text {
+      left: 20px;
+      top: 100%;
+      color: rgba(255,0,0,0.8);
+      margin-top: 5px;
+      font-weight: 600;
+      position: absolute;
+    }
+
+    button { outline: 0; }
 
     button.signup {
       float: right;
