--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="panel left" [ngClass]="{'slide': showAccount}">
-  <app-account-main (viewConnect)="viewConnect()"></app-account-main>
+  <app-account-main></app-account-main>
 </div>
 
 <div class="panel center" [ngClass]="{'slide-right': showAccount, 'slide-left': showSettings}">
@@ -8,5 +8,5 @@
 </div>
 
 <div class="panel right" [ngClass]="{'slide': showSettings}">
-  <app-settings-controller (viewConnect)="viewConnect()"></app-settings-controller>
+  <app-settings-controller></app-settings-controller>
 </div>
