Collapse account section down to one component

--- a/src/app/account/account.component.scss
+++ b/src/app/account/account.component.scss
@@ -1,4 +1,10 @@
-@import '../../../scss/variables';
+.relative { position: relative; width: 100%; height: 100%; overflow: hidden; }
+
+.panel {
+  width: 100%;
+  height: 100%;
+  transition: transform 350ms ease-out;
+}
 
 .overlay {
   position: absolute;
