--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="panel left" [ngClass]="{'slide': showAccount}">
-  <app-account-main></app-account-main>
+  <app-account></app-account>
 </div>
 
 <div class="panel center" [ngClass]="{'slide-right': showAccount, 'slide-left': showSettings}">
