--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="page" *ngIf="!showConfirm">
+<div class="page">
   <div class="welcome">
     <img src="/assets/signin@2x.png" alt="">
 
