Update pending page illustration

--- a/src/app/pending/pending.component.html
+++ b/src/app/pending/pending.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="confirm-image">
-      <img src="/assets/confirm-mascot.png" alt="">
+      <img src="/assets/pending-mascot.png" alt="">
     </div>
   </div>
 </div>
