--- a/src/app/pending/pending.component.html
+++ b/src/app/pending/pending.component.html
@@ -1,7 +1,9 @@
 <div class="page">
   <div class="confirm">
     <div class="confirm-banner">
-      Your account isn't activated yet, please hold on.
+      Your account isn't activated yet,
+      <br>
+      please hold on.
     </div>
 
     <div class="confirm-image">
